<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp"
    tools:context=".AddPhrases">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/edit_phrase_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/polyglot_logo"
            android:padding="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/polyglot_logo_wh_small"
            android:onClick="addReturnHome"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_phrase_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_box"
        android:fontFamily="@font/yeseva_one"
        android:hint="@string/enter_phrase"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="3dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_save_add"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_button_style_wh"
        android:fontFamily="@font/yeseva_one"
        android:onClick="addOnClick"
        android:text="@string/save"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/yeseva_one"
        android:text="@string/polyglot"
        android:textColor="#FFFFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>