<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp"
    tools:context=".Translate">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/polyglot_logo"
                android:onClick="translateReturnHome"
                app:srcCompat="@drawable/polyglot_logo_wh_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_poly_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/yeseva_one"
                android:gravity="center_vertical"
                android:text="@string/select_to_translate"
                android:textColor="#FFFFFFFF"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ListView
            android:id="@+id/list_translate_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_box"
            android:choiceMode="singleChoice"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/translate_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="2"
            android:fontFamily="@font/yeseva_one"
            android:gravity="start"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp">

        </TextView>

        <Button
            android:id="@+id/btn_pronounce_translate_id"
            android:layout_width="94dp"
            android:layout_height="88dp"
            android:layout_weight="0.001"
            android:background="@drawable/ic_pronounce_foreground"
            android:gravity="clip_vertical"
            android:onClick="pronounceOnClick" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_translate_translate_id"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:background="@drawable/round_button_style_wh"
            android:fontFamily="@font/yeseva_one"
            android:onClick="translateOnClick"
            android:text="@string/translate_all"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_translate_id"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/round_box"
            android:dropDownVerticalOffset="-6dp"
            android:gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />


        <Button
            android:id="@+id/btn_viewall_translate"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:layout_weight="0"
            android:background="@drawable/round_button_style_wh"
            android:fontFamily="@font/yeseva_one"
            android:onClick="viewAllOnClick"
            android:text="@string/view_all"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>